Restore optional chaining operator

--- a/apps/web/src/app/vault/individual-vault/bulk-action-dialogs/bulk-delete-dialog/bulk-delete-dialog.component.html
+++ b/apps/web/src/app/vault/individual-vault/bulk-action-dialogs/bulk-delete-dialog/bulk-delete-dialog.component.html
@@ -7,7 +7,7 @@
       <span *ngIf="cipherIds?.length">
         {{ "deleteSelectedItemsDesc" | i18n: cipherIds.length }}
       </span>
-      <span *ngIf="collections.length">
+      <span *ngIf="collections?.length">
         {{ "deleteSelectedCollectionsDesc" | i18n: collections.length }}
       </span>
       {{ "deleteSelectedConfirmation" | i18n }}
