--- a/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
+++ b/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
@@ -66,7 +66,7 @@
         <bit-tab label="{{ 'access' | i18n }}">
           <div class="tw-mb-3">
             {{ "grantCollectionAccess" | i18n }}
-            <span *ngIf="allowAdminAccessToAllCollectionItems">{{
+            <span *ngIf="organization.allowAdminAccessToAllCollectionItems">{{
               " " + ("adminCollectionAccess" | i18n)
             }}</span>
           </div>
