--- a/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
+++ b/apps/web/src/app/vault/components/collection-dialog/collection-dialog.component.html
@@ -64,7 +64,7 @@
           </bit-form-field>
         </bit-tab>
         <bit-tab label="{{ 'access' | i18n }}">
-          <div class="tw-mb-3">
+          <div class="tw-mb-3" *ngIf="flexibleCollectionsV1Enabled$ | async">
             {{ "grantCollectionAccess" | i18n }}
             <span *ngIf="organization.allowAdminAccessToAllCollectionItems">{{
               " " + ("adminCollectionAccess" | i18n)
