PM-5242 - UserVerificationFormInputComponent - Add hasMultipleVerificationMethods property so we can only show alternate methods if user has them.

--- a/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
+++ b/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
@@ -56,7 +56,10 @@
     </ng-container>
 
     <!-- Different method options -->
-    <div class="tw-flex tw-flex-col tw-items-center tw-justify-center">
+    <div
+      class="tw-flex tw-flex-col tw-items-center tw-justify-center"
+      *ngIf="hasMultipleVerificationMethods"
+    >
       <p class="tw-mb-1">Need a different method?</p>
       <button
         *ngIf="userVerificationOptions.client.masterPassword"
