--- a/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
@@ -26,6 +26,7 @@
       [title]="'installBrowserExtension' | i18n"
       icon="bwi-cli"
       (click)="navigateToExtension()"
+      [completed]="(onboardingTasks$ | async).installExtension"
     >
       <span class="tw-pl-1">
         {{ "installBrowserExtensionDetails" | i18n }}
