updated onboarding with async awaits. spec file updated. translation key added

--- a/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault-onboarding/vault-onboarding.component.html
@@ -17,7 +17,9 @@
     >
       <p class="tw-pl-1">
         {{ "onboardingImportDataDetailsPartOne" | i18n }}
-        <a (click)="emitToAddCipher()" class="link"> new item </a>
+        <a (click)="emitToAddCipher()" class="link">
+          {{ "onboardingImportDataDetailsLink" | i18n }}
+        </a>
         {{ "onboardingImportDataDetailsPartTwo" | i18n }}
       </p>
     </app-onboarding-task>
