PM-5242 - UserVerificationDialogComponent - (1) Wire up new inputs and outputs for UserVerificationFormInput (2) Don't show submit button when clientside biometrics verification active

--- a/libs/auth/src/angular/user-verification/user-verification-dialog.component.html
+++ b/libs/auth/src/angular/user-verification/user-verification-dialog.component.html
@@ -11,13 +11,27 @@
       <p bitTypography="body1" *ngIf="dialogParams.dialogBodyText">
         {{ dialogParams.dialogBodyText | i18n }}
       </p>
+
+      <!-- TODO: add optional call out with configurable - default to warning if not provided -->
+
       <app-user-verification-form-input
         [(invalidSecret)]="invalidSecret"
         formControlName="secret"
+        [verificationType]="dialogParams.clientSideOnlyVerification ? 'client' : 'server'"
+        (activeClientVerificationOptionChange)="handleActiveClientVerificationOptionChange($event)"
+        (biometricsVerificationResultChange)="handleBiometricsVerificationResultChange($event)"
       ></app-user-verification-form-input>
     </ng-container>
     <ng-container bitDialogFooter>
-      <button type="submit" bitButton bitFormButton buttonType="primary">
+      <!-- TODO: make button types configurable -->
+
+      <button
+        type="submit"
+        bitButton
+        bitFormButton
+        buttonType="primary"
+        *ngIf="activeClientVerificationOption !== ActiveClientVerificationOption.Biometrics"
+      >
         {{
           dialogParams.confirmButtonText
             ? (dialogParams.confirmButtonText | i18n)
