--- a/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
+++ b/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
@@ -43,16 +43,18 @@
       <div class="tw-flex tw-flex-col tw-items-center">
         <bit-icon [icon]="Icons.UserVerificationBiometricsIcon" class="tw-mb-4"></bit-icon>
         <p class="tw-font-bold tw-mb-1">Verify with biometrics</p>
-        <div class="tw-mb-4">
+        <div class="tw-mb-2" *ngIf="!biometricsVerificationFailed">
           <i class="bwi bwi-spinner bwi-spin" title="{{ 'loading' | i18n }}" aria-hidden="true"></i>
           Awaiting confirmation
         </div>
       </div>
 
-      <!-- <app-callout type="error" class="tw-mb-4">
+      <app-callout type="error" class="tw-mb-2" *ngIf="biometricsVerificationFailed">
         Could not complete biometrics.
-        <button bitLink type="button" linkType="primary">Try Again</button>
-      </app-callout> -->
+        <button bitLink type="button" linkType="primary" (click)="verifyUserViaBiometrics()">
+          Try Again
+        </button>
+      </app-callout>
     </ng-container>
 
     <!-- None  -->
