PM-5242 - UserVerificationFormInputComp - tweak comment

--- a/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
+++ b/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
@@ -165,7 +165,7 @@
   </bit-form-field>
 </ng-template>
 
-<!-- Add warning if dev forgot to pass in verification type -->
+<!-- warning for if dev forgot to pass in verification type -->
 <ng-container *ngIf="!verificationType">
   <app-callout type="error">
     Verification type of "server" or "client" is required for user-verification-form-input
