PM-5242 - UserVerificationFormInput comp html - add placeholder text for no client verifications found scenario

--- a/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
+++ b/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
@@ -66,7 +66,7 @@
         activeClientVerificationOption == ActiveClientVerificationOption.None
       "
     >
-      <p>None</p>
+      <p>Verification required for this action. Set a pin to continue.</p>
     </ng-container>
 
     <!-- Alternate verification options if user has more than 1 -->
