update breadcrumb header in org vault

--- a/apps/web/src/app/vault/org-vault/vault-header/vault-header.component.html
+++ b/apps/web/src/app/vault/org-vault/vault-header/vault-header.component.html
@@ -6,7 +6,7 @@
         [queryParams]="{ organizationId: organization.id, collectionId: null }"
         queryParamsHandling="merge"
       >
-        {{ organization.name }} {{ "vault" | i18n | lowercase }}
+        {{ organization.name }} {{ "collections" | i18n | lowercase }}
       </bit-breadcrumb>
       <ng-container>
         <bit-breadcrumb
