put breadcrumb change behind flag

--- a/apps/web/src/app/vault/org-vault/vault-header/vault-header.component.html
+++ b/apps/web/src/app/vault/org-vault/vault-header/vault-header.component.html
@@ -6,7 +6,13 @@
         [queryParams]="{ organizationId: organization.id, collectionId: null }"
         queryParamsHandling="merge"
       >
-        {{ organization.name }} {{ "collections" | i18n | lowercase }}
+        {{ organization.name }}
+        <span *ngIf="!flexibleCollectionsEnabled">
+          {{ "vault" | i18n | lowercase }}
+        </span>
+        <span *ngIf="flexibleCollectionsEnabled">
+          {{ "collections" | i18n | lowercase }}
+        </span>
       </bit-breadcrumb>
       <ng-container>
         <bit-breadcrumb
