[AC-1124] Fix bug after merge with main

--- a/apps/web/src/app/vault/org-vault/vault.component.html
+++ b/apps/web/src/app/vault/org-vault/vault.component.html
@@ -101,9 +101,7 @@
         </bit-no-items>
         <collection-access-restricted
           *ngIf="showCollectionAccessRestricted"
-          [canEdit]="
-            selectedCollection != null && selectedCollection.node.canEdit(organization, true)
-          "
+          [canEdit]="selectedCollection != null && selectedCollection.node.canEdit(organization)"
           (editInfoClicked)="editCollection(selectedCollection.node, CollectionDialogTabType.Info)"
         >
         </collection-access-restricted>
