--- a/libs/components/src/dialog/dialog/dialog.component.html
+++ b/libs/components/src/dialog/dialog/dialog.component.html
@@ -1,14 +1,20 @@
-<div
+<section
   class="tw-flex tw-w-full tw-flex-col tw-self-center tw-overflow-hidden tw-rounded tw-border tw-border-solid tw-border-secondary-300 tw-bg-background tw-text-main"
   [ngClass]="width"
   @fadeIn
 >
-  <div
+  <header
     class="tw-flex tw-items-center tw-gap-4 tw-border-0 tw-border-b tw-border-solid tw-border-secondary-300 tw-p-4"
   >
-    <h1 bitDialogTitleContainer class="tw-mb-0 tw-grow tw-truncate tw-text-lg">
-      <ng-content select="[bitDialogTitle]"></ng-content>
-    </h1>
+    <span class="tw-inline-flex tw-gap-2 tw-grow tw-items-baseline tw-truncate">
+      <h1 bitDialogTitleContainer bitTypography="h4" noMargin class="tw-mb-0 tw-truncate">
+        {{ title }}
+        <ng-content select="[bitDialogTitle]"></ng-content>
+      </h1>
+      <span *ngIf="subtitle" bitTypography="body2" class="tw-text-muted tw-truncate tw-flex-1">{{
+        subtitle
+      }}</span>
+    </span>
     <button
       type="button"
       bitIconButton="bwi-close"
@@ -18,7 +24,7 @@
       [attr.title]="'close' | i18n"
       [attr.aria-label]="'close' | i18n"
     ></button>
-  </div>
+  </header>
 
   <div class="tw-relative tw-flex tw-flex-col tw-overflow-hidden">
     <div
@@ -39,9 +45,9 @@
     </div>
   </div>
 
-  <div
+  <footer
     class="tw-flex tw-flex-row tw-items-center tw-gap-2 tw-border-0 tw-border-t tw-border-solid tw-border-secondary-300 tw-bg-background-alt tw-p-4"
   >
     <ng-content select="[bitDialogFooter]"></ng-content>
-  </div>
-</div>
+  </footer>
+</section>
