update vault filter service to allow getting the current organization. apply flexible collections logic to the bitcrumbs and filters in org view

--- a/apps/web/src/app/vault/org-vault/vault-header/vault-header.component.html
+++ b/apps/web/src/app/vault/org-vault/vault-header/vault-header.component.html
@@ -7,10 +7,10 @@
         queryParamsHandling="merge"
       >
         {{ organization.name }}
-        <span *ngIf="!flexibleCollectionsEnabled">
+        <span *ngIf="!organization.flexibleCollections">
           {{ "vault" | i18n | lowercase }}
         </span>
-        <span *ngIf="flexibleCollectionsEnabled">
+        <span *ngIf="organization.flexibleCollections">
           {{ "collections" | i18n | lowercase }}
         </span>
       </bit-breadcrumb>
