--- a/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
+++ b/libs/auth/src/angular/user-verification/user-verification-form-input.component.html
@@ -113,15 +113,23 @@
     <ng-container *ngTemplateOutlet="masterPasswordFormField"></ng-container>
   </ng-container>
   <ng-container *ngIf="userVerificationOptions.server.otp">
-    <div class="tw-mb-6">
-      <label class="tw-block">{{ "sendVerificationCode" | i18n }}</label>
-      <button type="button" bitButton buttonType="secondary" [bitAction]="requestOTP" appAutofocus>
-        {{ "sendCode" | i18n }}
-      </button>
-      <span class="tw-ml-2 tw-text-success" role="alert" @sent *ngIf="sentCode">
-        <i class="bwi bwi-check-circle" aria-hidden="true"></i>
-        {{ "codeSent" | i18n }}
-      </span>
+    <div class="tw-mb-6" *ngIf="!sentInitialCode">
+      <i class="bwi bwi-spinner bwi-spin" title="{{ 'loading' | i18n }}" aria-hidden="true"></i>
+    </div>
+
+    <div class="tw-mb-6" *ngIf="sentInitialCode">
+      {{ "enterVerificationCodeSentToEmail" | i18n }}
+
+      <p class="mb-0">
+        <button bitLink type="button" linkType="primary" (click)="requestOTP()">
+          {{ "resendCode" | i18n }}
+        </button>
+
+        <span class="tw-ml-2 tw-text-success" role="alert" @sent *ngIf="sentCode">
+          <i class="bwi bwi-check-circle" aria-hidden="true"></i>
+          {{ "codeSent" | i18n }}
+        </span>
+      </p>
     </div>
 
     <bit-form-field disableMargin>
