Prevent leaking password fields after toggling visibility
Browsers write toggled input fields to userdata in plain text unless
autocomplete="off". Some send them to cloud spellcheckers. `appInputVerbatim`
by default disables those behaviors, but it was missing on some password fields.

Kept autocomplete="new-password" as is despite the risk.

--- a/apps/web/src/app/auth/login/login.component.html
+++ b/apps/web/src/app/auth/login/login.component.html
@@ -82,6 +82,7 @@
                 id="login_input_master-password"
                 type="password"
                 bitInput
+                appInputVerbatim
                 #masterPasswordInput
                 formControlName="masterPassword"
               />
