--- a/apps/web/src/app/auth/register-form/register-form.component.html
+++ b/apps/web/src/app/auth/register-form/register-form.component.html
@@ -38,6 +38,7 @@
         <input
           id="register-form_input_master-password"
           bitInput
+          appInputVerbatim
           type="password"
           formControlName="masterPassword"
         />
@@ -69,6 +70,7 @@
         <input
           id="register-form_input_confirm-master-password"
           bitInput
+          appInputVerbatim
           type="password"
           formControlName="confirmMasterPassword"
         />
