--- a/apps/web/src/app/auth/settings/account/change-email.component.html
+++ b/apps/web/src/app/auth/settings/account/change-email.component.html
@@ -9,6 +9,7 @@
       <input
         id="change-email_input_masterPassword"
         bitInput
+        appInputVerbatim
         type="password"
         formControlName="masterPassword"
       />
