--- a/apps/web/src/app/auth/settings/emergency-access/takeover/emergency-access-takeover.component.html
+++ b/apps/web/src/app/auth/settings/emergency-access/takeover/emergency-access-takeover.component.html
@@ -14,6 +14,7 @@
             <bit-label>{{ "newMasterPass" | i18n }}</bit-label>
             <input
               bitInput
+              appInputVerbatim
               type="password"
               autocomplete="new-password"
               formControlName="masterPassword"
@@ -33,6 +34,7 @@
             <bit-label>{{ "confirmNewMasterPass" | i18n }}</bit-label>
             <input
               bitInput
+              appInputVerbatim
               type="password"
               autocomplete="new-password"
               formControlName="masterPasswordRetype"
