--- a/apps/web/src/app/auth/settings/security/change-kdf/change-kdf-confirmation.component.html
+++ b/apps/web/src/app/auth/settings/security/change-kdf/change-kdf-confirmation.component.html
@@ -23,6 +23,7 @@
               required
               formControlName="masterPassword"
               appAutofocus
+              appInputVerbatim
             />
             <button
               type="button"
