--- a/apps/web/src/app/tools/vault-export/export.component.html
+++ b/apps/web/src/app/tools/vault-export/export.component.html
@@ -65,6 +65,7 @@
             <bit-label>{{ "filePassword" | i18n }}</bit-label>
             <input
               bitInput
+              appInputVerbatim
               type="password"
               id="filePassword"
               formControlName="filePassword"
@@ -86,6 +87,7 @@
           <bit-label>{{ "confirmFilePassword" | i18n }}</bit-label>
           <input
             bitInput
+            appInputVerbatim
             type="password"
             id="confirmFilePassword"
             formControlName="confirmFilePassword"
