--- a/libs/vault/src/components/password-reprompt.component.html
+++ b/libs/vault/src/components/password-reprompt.component.html
@@ -11,6 +11,7 @@
         <input
           bitInput
           appAutofocus
+          appInputVerbatim
           id="masterPassword"
           type="password"
           formControlName="masterPassword"
