--- a/apps/web/src/app/auth/migrate-encryption/migrate-legacy-encryption.component.html
+++ b/apps/web/src/app/auth/migrate-encryption/migrate-legacy-encryption.component.html
@@ -21,6 +21,7 @@
           <input
             id="masterPassword"
             bitInput
+            appInputVerbatim
             type="password"
             formControlName="masterPassword"
             appAutofocus
