--- a/bitwarden_license/bit-web/src/app/admin-console/organizations/manage/scim.component.html
+++ b/bitwarden_license/bit-web/src/app/admin-console/organizations/manage/scim.component.html
@@ -50,6 +50,7 @@
     <bit-label>{{ "scimApiKey" | i18n }}</bit-label>
     <input
       bitInput
+      appInputVerbatim
       [type]="showScimKey ? 'text' : 'password'"
       formControlName="clientSecret"
       id="clientSecret"
