--- a/apps/web/src/app/admin-console/organizations/settings/account.component.html
+++ b/apps/web/src/app/admin-console/organizations/settings/account.component.html
@@ -57,12 +57,16 @@
     org && !loading && !org.flexibleCollections && (flexibleCollectionsMigrationEnabled$ | async)
   "
 >
-  <!-- TODO: design to advise on layout and wording -->
   <h1 bitTypography="h1" class="tw-mt-16 tw-pb-2.5">{{ "collectionManagement" | i18n }}</h1>
-  <p>{{ "collectionManagementDesc" | i18n }}</p>
+  <p>
+    {{ "collectionEnhancementsDesc" | i18n }}
+    <!-- TODO: insert link to help docs when known -->
+    <a href="" target="_blank" rel="noopener">
+      {{ "collectionEnhancementsLearnMore" | i18n }}
+    </a>
+  </p>
   <button type="button" bitButton buttonType="primary" [bitAction]="enableCollectionEnhancements">
-    <!-- TODO: i18n once wording is decided -->
-    Enable collection management enhancements
+    {{ "enable" | i18n }}
   </button>
 </form>
 <form
