[PM-5551] Removing Autofillv2 and AutofillOverlay Feature Flags

--- a/apps/browser/src/autofill/popup/settings/autofill.component.html
+++ b/apps/browser/src/autofill/popup/settings/autofill.component.html
@@ -26,7 +26,7 @@
       {{ autofillKeyboardHelperText }}
     </div>
   </div>
-  <ng-container *ngIf="isAutoFillOverlayFlagEnabled">
+  <ng-container>
     <div class="box">
       <div class="box-content">
         <div class="box-content-row" appBoxRow>
